Created tabs, styling for the main Navigation needs to be done. Get POC ready for discussion.

--- a/DotNetFirstTake/Views/Home/Index.cshtml
+++ b/DotNetFirstTake/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HomeViewModel
 
-<h1 class="header">@Model.Title</h1>
+<h1>@Model.Title</h1>
 @foreach (var necklace in Model.Necklaces)
 {
   <div class="col-sm-4 col-lg-4 col-md-4">
