--- a/DotNetFirstTake/wwwroot/content/site.css
+++ b/DotNetFirstTake/wwwroot/content/site.css
@@ -1,6 +1,4 @@
 ﻿body {
-  padding-top: 50px;
-  padding-bottom: 20px;
   background-image: url('/images/looping-abstract-color-background-pink-red-blue_suzyu0thd__F0000.png');
   background-size: cover;
 }
@@ -10,12 +8,30 @@
   padding-right: 15px;
 }
 
-.header {
-  color: white;
-}
-
 .margion-top {
 
   margin-top: 10px;
 }
 
+.logo {
+  display: table;
+  float: left;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+  position: relative;
+  z-index: 110;
+}
+
+nav {
+  background: black;
+  padding: 30px 0;
+  border-bottom: 1px solid #fff;
+  transition: all .3s ease;
+}
+
+nav.navbar-fixed-top {
+  transition: all .3s ease;
+  background: black;
+  padding: 10px 0;
+  border-bottom: 1px solid #fff;
+}
